--- a/css/style.css
+++ b/css/style.css
@@ -179,3 +179,16 @@ header ul li a
 {
     transform: scale(.65);
 }
+.footer{
+    position: absolute;
+    bottom: 0;
+    background-color: rgb(255, 255, 255);
+    width: 100%;
+    height: 25px;
+}
+.footer p{
+    text-align: center;
+    font-size: 12px;
+    color: rgb(68, 68, 68);
+    margin: 0 auto;
+}
